Add coming soon page.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,7 @@
-<h1>I'll come back soon</h1>
+<%= image_tag "logo-web.png", :class => "logo" %>
+
+<div class="message">
+	<span class="red">def</span>
+	<span class="blue">ricardo_oliveira_leite(</span><span class="param">coming_soon</span><span class="blue">)</span>
+	<span class="red">end</span>
+</div>
