--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,47 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html, body {
+  background-image:  image-url('bg.png');
+	background-size:   cover;
+  background-position: center center;
+  min-height: 100%;
+  min-width: 100%;
+}
+
+.logo {
+  width: auto;
+  height: 300px;
+  position: absolute;
+  left: 50%;
+  top: 50%; 
+  margin-left: -259px;
+  margin-top: -150px;
+}
+
+.message {
+  text-align:center;
+  width: 700px;
+  position: absolute;
+  left: 50%;
+  top: 60%; 
+  margin-left: -350px;
+  margin-top: 100px; 
+  color: #FFFFFF;
+  font-size: 30px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: lighter;
+}
+
+.red {
+  color: #7a1919;
+}
+
+.blue {
+  color: #b1d2df;
+}
+
+.param {
+  color: #d4af1b;
+}
